# naviga

./: Cargo.toml  LICENSE  README.md
src/: app.rs  event.rs  handler.rs  main.rs  tui.rs
src/app/: action.rs  directory.rs  directory_kind.rs  entry.rs  utils.rs
src/app/directory/: render.rs  utils.rs
