[package]
name = "naviga"
version = "0.1.4"
authors = ["Franck Hu <franck.hu@epita.fr>"]
edition = "2021"
license = "MIT"
description = "Naviga helps users navigate easily through directories"
repository = "https://github.com/ByHelyo/naviga"
readme = "README.md"

[dependencies]
tui = "0.18"
crossterm = "0.23"
dirs = "4.0.0"
